# PoseBench

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  acknowledgements.html  available_methods.html  bonus.html  citation.bib  citing_this_work.html  comparative_plots.html  data_preparation.html  ensemble_inference.html  for_developers.html  genindex.html  index.html  installation.html  method_inference.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sweep_inference.html  tutorials.html
.doctrees/: acknowledgements.doctree  available_methods.doctree  bonus.doctree  citing_this_work.doctree  codeautolink-cache.json  comparative_plots.doctree  data_preparation.doctree  ensemble_inference.doctree  for_developers.doctree  index.doctree  installation.doctree  method_inference.doctree  sweep_inference.doctree  tutorials.doctree
.github/: PULL_REQUEST_TEMPLATE.md
_modules/: index.html
_sources/: acknowledgements.rst.txt  available_methods.rst.txt  bonus.rst.txt  citing_this_work.rst.txt  comparative_plots.rst.txt  data_preparation.rst.txt  ensemble_inference.rst.txt  for_developers.rst.txt  index.rst.txt  installation.rst.txt  method_inference.rst.txt  sweep_inference.rst.txt  tutorials.rst.txt
configs/: analysis.html  data.html  model.html
data/: posebusters_pdb_ccd_ids.txt
docs/: .docs.environment.yaml  .docs.requirements
environments/: adfr_environment.yaml  boltz_environment.yaml  casp15_ligand_scoring_environment.yaml  chai_lab_environment.yaml  diffdock_environment.yaml  dynamicbind_environment.yaml  fabind_environment.yaml  flowdock_environment.yaml  neuralplexer_environment.yaml  posebench_environment.yaml  posebench_rd_environment.yaml  pymol_environment.yaml  rfaa_environment.yaml
forks/boltz/: .gitignore  LICENSE  README.md  pyproject.toml
forks/boltz/docs/: evaluation.md  prediction.md  training.md
forks/boltz/examples/: affinity.yaml  cyclic_prot.yaml  ligand.fasta  ligand.yaml  multimer.yaml  pocket.yaml  prot.fasta  prot.yaml  prot_custom_msa.yaml  prot_no_msa.yaml
forks/boltz/examples/msa/: seq2.a3m
forks/boltz/scripts/eval/: aggregate_evals.py  physcialsim_metrics.py  run_evals.py
forks/boltz/scripts/process/: README.md  ccd.py  cluster.py  mmcif.py  msa.py  rcsb.py  requirements.txt
forks/boltz/scripts/train/: README.md  train.py
forks/boltz/scripts/train/assets/: casp15_ids.txt  test_ids.txt  validation_ids.txt
forks/boltz/scripts/train/configs/: confidence.yaml  full.yaml  structure.yaml
forks/boltz/src/boltz/: main.py
forks/boltz/src/boltz/data/: mol.py  pad.py  types.py
forks/boltz/src/boltz/data/crop/: affinity.py
forks/boltz/src/boltz/data/feature/: featurizer.py  featurizerv2.py  symmetry.py
forks/boltz/src/boltz/data/module/: inference.py  inferencev2.py  training.py  trainingv2.py
forks/boltz/src/boltz/data/msa/: mmseqs2.py
forks/boltz/src/boltz/data/parse/: fasta.py  mmcif.py  mmcif_with_constraints.py  schema.py
forks/boltz/src/boltz/data/tokenize/: boltz.py  boltz2.py
forks/boltz/src/boltz/data/write/: mmcif.py  pdb.py  utils.py  writer.py
forks/boltz/src/boltz/model/layers/: attention.py  confidence_utils.py  outer_product_mean.py  pair_averaging.py  pairformer.py  relative.py  transition.py  triangular_mult.py
forks/boltz/src/boltz/model/layers/triangular_attention/: attention.py  primitives.py  utils.py
forks/boltz/src/boltz/model/loss/: bfactor.py  confidence.py  confidencev2.py  diffusion.py  diffusionv2.py  validation.py
forks/boltz/src/boltz/model/models/: boltz1.py  boltz2.py
forks/boltz/src/boltz/model/modules/: affinity.py  confidence.py  confidence_utils.py  confidencev2.py  diffusion.py  diffusionv2.py  encoders.py  encodersv2.py  transformers.py  transformersv2.py  trunk.py  trunkv2.py  utils.py
forks/boltz/src/boltz/model/optim/: ema.py  scheduler.py
forks/boltz/src/boltz/model/potentials/: potentials.py  schedules.py
forks/boltz/tests/: profiling.py  test_kernels.py  test_regression.py  test_utils.py
forks/boltz/tests/model/layers/: test_outer_product_mean.py  test_triangle_attention.py
modules/: posebench.binding_site_crop_preparation.html  posebench.complex_alignment.html  posebench.data_utils.html  posebench.ensemble_generation.html  posebench.inference_relaxation.html  posebench.minimize_energy.html  posebench.model_utils.html  posebench.resolvers.html  posebench.utils.html  src.binding_site_crop_preparation.html  src.complex_alignment.html  src.data_utils.html  src.ensemble_generation.html  src.inference_relaxation.html  src.minimize_energy.html  src.model_utils.html  src.resolvers.html  src.utils.html
notebooks/: adding_new_dataset_tutorial.ipynb  adding_new_method_tutorial.ipynb  astex_diverse_inference_results_plotting.ipynb  astex_diverse_interaction_dataframes.h5  astex_diverse_plif_metrics.csv  astex_diverse_structured_plif_metrics.csv  astex_method_interaction_analysis_plotting.ipynb  astex_method_interaction_analysis_plotting.py  astex_posebusters_casp15_interaction_analysis_plotting.ipynb  biosynthetic_protein_pdb_report.csv  casp15_inference_results_plotting.ipynb  casp15_interaction_dataframes.h5  casp15_method_interaction_analysis_plotting.ipynb  casp15_method_interaction_analysis_plotting.py  casp15_plif_metrics.csv  casp15_structured_plif_metrics.csv  chai-lab_casp15_interaction_dataframes_1.h5  consensus_ensemble_casp15_interaction_dataframes_1.h5  dataset_interaction_analysis_plotting.ipynb  dataset_interaction_analysis_plotting.py  diffdock_casp15_interaction_dataframes_1.h5  diffdockv1_casp15_interaction_dataframes_1.h5  dockgen_expanded_inference_results_plotting.ipynb  dockgen_inference_results_plotting.ipynb  dockgen_interaction_dataframes.h5  dockgen_method_interaction_analysis_plotting.ipynb  dockgen_method_interaction_analysis_plotting.py  dockgen_plif_metrics.csv  dockgen_structured_plif_metrics.csv  dynamicbind_casp15_interaction_dataframes_1.h5  failure_modes_analysis_plotting.ipynb  failure_modes_analysis_plotting_plinder.ipynb  (+15 more)
(+592 files in other folders)
